Fix overflow and add onClick to Modal

--- a/components/SubscribeComponents/CoffeePicker/Question/Question.module.scss
+++ b/components/SubscribeComponents/CoffeePicker/Question/Question.module.scss
@@ -38,8 +38,6 @@
 
 
 .options {
-    overflow: hidden;
-
     animation: slideDown .3s ease-in-out;
 }
 
